--- a/public/catalogue.html
+++ b/public/catalogue.html
@@ -81,7 +81,7 @@
                     <div class="catalog-sidebar__section">
                         <h3 class="catalog-sidebar__title">Disponibilité</h3>
                         <label class="form-checkbox">
-                            <input type="checkbox" name="in_stock" value="1">
+                            <input type="checkbox" name="in_stock" value="1" checked>
                             <span>En stock uniquement</span>
                         </label>
                     </div>
